PAL OSX error code cleanups.
* Replace all `kErr*` constants with new `PAL_Error_*` ones and define them in
  `pal_error.h` / `Interop.SecErr.cs`.

* Add new `PAL_Error_SeeStatus` and `PAL_Error_Platform` error codes.

* Move all signature code from `Interop.SecKeyRef.cs` into a new `Interop.SignVerify.cs`.
  This makes the managed side consistent with where the native implementation lives and
  the split is also necessary for the upcoming iOS work.  The new `Interop.SignVerify.cs`
  can be fully shared between macOS and iOS whereas the remaining `Interop.SecKeyRef.cs`
  code will need a platform-specific approach.

* Add an extra `out int *pOSStatusOut` parameter to all APIs in `Interop.SignVerify.cs`;
  the native code can now return either `PAL_Error_SeeError` or `PAL_Error_SeeStatus` on
  error; add a check for `PAL_Error_Platform` as well.

  The upcoming iOS port will use native APIs such as `SecKeyRawSign()` which return
  `OSStatus` instead of `CFErrorRef`.  This change allows us to reuse the managed side
  as well a some of the native code as well.

--- a/src/Native/Unix/System.Security.Cryptography.Native.Apple/CMakeLists.txt
+++ b/src/Native/Unix/System.Security.Cryptography.Native.Apple/CMakeLists.txt
@@ -8,6 +8,7 @@ find_library(COREFOUNDATION_LIBRARY CoreFoundation)
 find_library(SECURITY_LIBRARY Security)
 
 set(NATIVECRYPTO_SOURCES
+    pal_error.h
     pal_digest.c
     pal_ecc.c
     pal_hmac.c
