--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,6 +6,10 @@
     <DisableImplicitFrameworkDefines>true</DisableImplicitFrameworkDefines>
     <DisableImplicitConfigurationDefines>true</DisableImplicitConfigurationDefines>
     
+    <!-- Disable package restore -->
+    <GenerateDependencyFile>false</GenerateDependencyFile>
+    <ComputeNETCoreBuildOutputFiles>false</ComputeNETCoreBuildOutputFiles>
+
     <!--
     The Microsoft.NET.Sdk defaults the AssemblySearchPaths earlier than buildtools, so default
     the correct search paths here. We are rather restrictive by design - only ref assemblies should
